--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   material_dialogs: ^1.1.1
-
+  auth_buttons: ^1.0.1+4 
+  #splash
+  animated_splash_screen: ^1.1.0
+  # Google SignIn 
+  google_sign_in: ^5.1.1
+  firebase_auth: ^3.1.1
+  # State Management
+  provider: ^6.0.0
+  shared_preferences: ^2.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
