--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   # State Management
   provider: ^6.0.0
   shared_preferences: ^2.0.8
+  #firestore
+  cloud_firestore: ^3.1.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
